# lizzardjs

./: .gitignore  Cargo.toml  README.md  index.js  printInfo.js  start.bat
examples/: .env  index.js  module.js
src/: main.rs
src/functions/: console.rs  error.rs  lizlib.rs  lizzard.rs  mod.rs  process.rs  require.rs
src/functions/lizlib/: fs.rs
src/functions/lizzard/: fetch.rs  fs.rs
src/functions/process/: env.rs  os.rs
