[package]
name = "lizzardjs"
version = "0.1.0"
author = ["mustafa 'pxsty' kok <pxsty@pxserv.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
v8 = "0.92.0"
lazy_static = "1.4.0"
os_info = "3.8.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }